# virtual-ta

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: config.py  ingest.py  ingest_tds.py  main.py  qdrant.py  scrape_discourse.py  scrape_tds.py  utils.py
