[project]
name = "virtual-ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "openai>=1.86.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.6",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "requests>=2.32.4",
]
